--- a/res/layout/fragment_car_age_filter.xml
+++ b/res/layout/fragment_car_age_filter.xml
@@ -18,7 +18,7 @@
        
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="Choose Your Price Range"
+        android:text="Choose Car Age"
         android:textSize="20dp"
         android:gravity="center"
         android:textColor="@color/blue"
