--- a/res/layout/fragment_transmission_filter.xml
+++ b/res/layout/fragment_transmission_filter.xml
@@ -41,7 +41,7 @@
 
      <CheckBox
          android:textColor="@color/blue"
-         
+         android:id="@+id/trans_manual"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentRight="true"
@@ -70,7 +70,7 @@
 
      <CheckBox
          android:textColor="@color/blue"
-         
+         android:id="@+id/trans_auto"         
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentRight="true"
@@ -82,7 +82,6 @@
          
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
-         android:layout_alignBottom="@+id/checkBox3"
          android:layout_alignParentLeft="true"
          android:text="Automatic"
          android:textSize="16dp" />
